# dynamic_reconfigure_test

./: CMakeLists.txt  README.md  package.xml
cfg/: Example.cfg  ExampleBroken.cfg
scripts/: inpect_parameters_message.py
src/: node.cpp  nodeBroken.cpp
test/: testParameterDescrptionSerialisation.cpp
